<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:padding="@dimen/activity_horizontal_margin"
        android:layout_height="match_parent"
        tools:context=".home.TopicFragment">

    <TextView android:layout_width="wrap_content"
              android:textSize="44sp"
              android:layout_height="wrap_content"
              app:layout_constraintTop_toTopOf="parent"
              android:textColor="@android:color/black"
              android:textStyle="bold"
              android:text="@string/app_name"
              android:layout_margin="@dimen/activity_horizontal_margin"
              app:layout_constraintBottom_toTopOf="@id/card_container"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintStart_toStartOf="parent"/>

    <androidx.cardview.widget.CardView
            android:id="@+id/card_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"
            app:cardCornerRadius="8dp"
            app:cardElevation="12dp"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <LinearLayout android:layout_width="match_parent"
                      android:orientation="vertical"
                      android:gravity="center"
                      android:padding="@dimen/activity_horizontal_margin"
                      android:layout_height="wrap_content">

            <EditText android:layout_width="match_parent"
                      android:id="@+id/field_topic"
                      android:textSize="@dimen/title_text_size"
                      android:inputType="text"
                      android:padding="@dimen/text_margin"
                      android:layout_margin="@dimen/activity_horizontal_margin"
                      android:background="@drawable/field_topic_background"
                      android:layout_height="wrap_content"
                      android:hint="@string/enter_topic"/>

            <Button android:layout_width="wrap_content"
                    android:id="@+id/proceed_button"
                    android:text="@string/proceed"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_height="wrap_content"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>