<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ChatFragment">

    <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/app_name"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <View android:layout_width="match_parent" android:layout_height="4dp"
          android:background="@drawable/shadow"
          app:layout_constraintTop_toBottomOf="@id/toolbar"/>

    <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/recycler_view"
            android:paddingTop="@dimen/activity_horizontal_margin"
            android:paddingBottom="@dimen/activity_horizontal_margin"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@id/bottom_layout"
            android:layout_height="0dp"/>

    <View android:layout_width="match_parent" android:layout_height="4dp"
          android:background="@drawable/shadow"
          android:rotation="180"
          app:layout_constraintBottom_toTopOf="@id/bottom_layout"/>

    <LinearLayout android:layout_width="match_parent"
                  android:id="@+id/bottom_layout"
                  android:orientation="horizontal"
                  app:layout_constraintBottom_toBottomOf="parent"
                  app:layout_constraintStart_toStartOf="parent"
                  app:layout_constraintEnd_toEndOf="parent"
                  android:layout_height="wrap_content">

        <EditText android:layout_width="0dp"
                  android:id="@+id/field_message"
                  android:textSize="@dimen/title_text_size"
                  android:inputType="text"
                  android:gravity="center_vertical"
                  android:background="@android:color/transparent"
                  android:layout_weight="8"
                  android:padding="@dimen/text_margin"
                  android:layout_height="wrap_content"
                  android:hint="@string/enter_message"/>

        <Button android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/send"
                android:layout_weight="2"
                android:id="@+id/send_button"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>